SonarLint warnings are removed